# Truth-Guardian-Submit

./: .dockerignore  Dockerfile  README.md  __init__.py  app.py  client.py  fix_main.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  __init__.py  app.py  truth_guardian_vak_environment.py
