[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-truth_guardian_vak"
version = "0.1.0"
description = "Truth Guardian Vak environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "openenv>=0.2.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
server = "truth_guardian_vak.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["truth_guardian_vak", "truth_guardian_vak.server"]
package-dir = { "truth_guardian_vak" = ".", "truth_guardian_vak.server" = "server" }
