[project]
name = "truth-guardian-vak"
version = "1.0.0"
description = "AI-powered scam detection system"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
start = "uvicorn app:app --host 0.0.0.0 --port 7860"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
